WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136464
Fix an assertion sometimes seen under RenderLayerCompositor::detachRootLayer()
https://bugs.webkit.org/show_bug.cgi?id=136464
Summary
Fix an assertion sometimes seen under RenderLayerCompositor::detachRootLayer()
Simon Fraser (smfr)
Reported
2014-09-02 14:20:00 PDT
Fix an assertion sometimes seen under RenderLayerCompositor::detachRootLayer()
Attachments
Patch
(2.65 KB, patch)
2014-09-02 14:20 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-09-02 14:20:54 PDT
Created
attachment 237514
[details]
Patch
Tim Horton
Comment 2
2014-09-02 14:22:27 PDT
Comment on
attachment 237514
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=237514&action=review
> Source/WebCore/rendering/RenderLayerCompositor.cpp:3451 > + if (RenderLayerBacking* backing = layer ? layer->backing() : 0)
nullptr What makes us sure layout is up to date now?
Simon Fraser (smfr)
Comment 3
2014-09-02 14:26:02 PDT
http://trac.webkit.org/changeset/173186
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug