Fix an assertion sometimes seen under RenderLayerCompositor::detachRootLayer() https://bugs.webkit.org/show_bug.cgi?id=136464

Reviewed by Tim Horton.

Don't try to call RenderLayer::isVisuallyNonEmpty() under RenderLayerCompositor::detachRootLayer()
when layout might be stale; there's not point trying to update the backing store state
when detaching, only when attaching.

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::rootLayerAttachmentChanged):

Canonical link: https://commits.webkit.org/154255@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173186 268f45cc-cd09-0410-ab3c-d52691b4dbfc